--- a/.github/workflows/build_vscode_extension.yml
+++ b/.github/workflows/build_vscode_extension.yml
@@ -17,6 +17,7 @@ jobs:
 
   # Windows
   build-vscode-extension-on-windows-latest:
+    name: Build on Windows
     runs-on: windows-latest
 
     steps:
