--- a/.github/workflows/build_vscode_extension.yml
+++ b/.github/workflows/build_vscode_extension.yml
@@ -8,10 +8,11 @@ on:
     - "main"
   workflow_call: # Added this line to make it reusable
     # Add inputs here if needed. Example:
-    # inputs:
-    #   some_input:
-    #     required: true
-    #     type: boolean
+    inputs:
+      upload_artifact:
+        required: false
+        type: boolean
+        default: false
 
 jobs:
 
@@ -26,11 +27,30 @@ jobs:
 
     - name: Install NodeJS dependencies
       run: npm i
-      working-directory: supplements/VSCode-Extension
+      working-directory: ${{github.workspace}}/supplements/VSCode-Extension
 
     - name: Package the VSCode Extension
       run: npm run win-package
-      working-directory: supplements/VSCode-Extension
+      working-directory: ${{github.workspace}}/supplements/VSCode-Extension
+
+    - name: Get VSCode Extension version
+      id: get-file
+      run: |
+        $FilePath = Get-ChildItem -Path "${{github.workspace}}/supplements/VSCode-Extension/" -Filter "*.vsix" | Select-Object -First 1 | Select-Object -ExpandProperty FullName
+        if ($FilePath) {
+          $FileName = Split-Path -Path $FilePath -Leaf
+          $VersionWithExt = $FileName.Replace("polarfrankie-", "")
+          echo "EXT_VERSION_FILE_NAME=$$VersionWithExt" >> $env:GITHUB_ENV
+        } else {
+          Write-Error "No .vsix files found in ${{github.workspace}}/supplements/VSCode-Extension/"
+        }
+
+    - name: Upload Binaries Artifact (optional)
+      if: inputs.upload_artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: PolarFrankie-VSCode-v${{env.EXT_VERSION_FILE_NAME}}
+        path: ${{github.workspace}}/supplements/VSCode-Extension/polarfrankie-*.vsix
 
 #  # Linux
 #  build-vscode-extension-on-ubuntu-latest:
