--- a/.github/workflows/build_vscode_extension.yml
+++ b/.github/workflows/build_vscode_extension.yml
@@ -12,7 +12,7 @@ on:
       upload_artifact:
         required: false
         type: boolean
-        default: false
+        default: true
 
 jobs:
 
