--- a/.github/workflows/build_vscode_extension.yml
+++ b/.github/workflows/build_vscode_extension.yml
@@ -51,7 +51,7 @@ jobs:
         }
 
     - name: Upload Binaries Artifact (optional)
-      if: inputs.upload_artifact == true
+      if: ${{ inputs.upload_artifact == true }}
       uses: actions/upload-artifact@v4
       with:
         name: PolarFrankie-VSCode-v${{env.EXT_VERSION_FILE_NAME}}
