--- a/.github/workflows/transpiler.yml
+++ b/.github/workflows/transpiler.yml
@@ -12,6 +12,13 @@ on:
 jobs:
 
   # Debug
+  tmp:
+    name: TMP
+    uses: ./.github/workflows/build_vscode_extension.yml
+    with:
+      upload_artifact: true
+
+  # Debug
   build-transpiler-debug:
     name: Debug
     uses: ./.github/workflows/_transpiler_dynamic_build.yml
