--- a/.github/workflows/build_vscode_extension.yml
+++ b/.github/workflows/build_vscode_extension.yml
@@ -12,7 +12,7 @@ on:
       upload_artifact:
         required: false
         type: boolean
-        default: true
+        default: false
 
 jobs:
 
@@ -51,7 +51,7 @@ jobs:
         }
 
     - name: Upload Binaries Artifact (optional)
-      if: ${{ inputs.upload_artifact }}
+      if: inputs.upload_artifact
       uses: actions/upload-artifact@v4
       with:
         name: PolarFrankie-VSCode-v${{env.EXT_VERSION_FILE_NAME}}
