--- a/.github/workflows/transpiler.yml
+++ b/.github/workflows/transpiler.yml
@@ -12,11 +12,11 @@ on:
 jobs:
 
   # Debug
-  tmp:
-    name: TMP
-    uses: ./.github/workflows/build_vscode_extension.yml
-    with:
-      upload_artifact: true
+#  tmp:
+#    name: TMP
+#    uses: ./.github/workflows/build_vscode_extension.yml
+#    with:
+#      upload_artifact: true
 
   # Debug
   build-transpiler-debug:
