--- a/.github/workflows/_transpiler_dynamic_build.yml
+++ b/.github/workflows/_transpiler_dynamic_build.yml
@@ -12,20 +12,36 @@ jobs:
 
   # Windows
   build-transpiler-on-windows-latest-x86-64:
-    name: Windows
+    name: Windows x64
     uses: ./.github/workflows/_transpiler_windows_build.yml
     with:
       build_platform: x64
       build_platform_name: x86_64
       build_mode: ${{inputs.build_mode}}
       bundle_binaries: ${{inputs.bundle_binaries}}
+  build-transpiler-on-windows-latest-x86-32:
+    name: Windows x32
+    uses: ./.github/workflows/_transpiler_windows_build.yml
+    with:
+      build_platform: Win32
+      build_platform_name: x86_32
+      build_mode: ${{inputs.build_mode}}
+      bundle_binaries: ${{inputs.bundle_binaries}}
 
   # Unix-like (Windows, macOS)
   build-transpiler-on-unix-like-latest-x86-64:
-    name: Unix-like
+    name: Unix-like x64
     uses: ./.github/workflows/_transpiler_unix_like_build.yml
     with:
       build_platform: x64
       build_platform_name: x86_64
+      build_mode: ${{inputs.build_mode}}
+      bundle_binaries: ${{inputs.bundle_binaries}}
+  build-transpiler-on-unix-like-latest-x86-32:
+    name: Unix-like x32
+    uses: ./.github/workflows/_transpiler_unix_like_build.yml
+    with:
+      build_platform: x86
+      build_platform_name: x86_32
       build_mode: ${{inputs.build_mode}}
       bundle_binaries: ${{inputs.bundle_binaries}}
