--- a/.github/workflows/_transpiler_dynamic_build.yml
+++ b/.github/workflows/_transpiler_dynamic_build.yml
@@ -20,7 +20,7 @@ jobs:
       build_mode: ${{inputs.build_mode}}
       bundle_binaries: ${{inputs.bundle_binaries}}
   build-transpiler-on-windows-latest-x86-32:
-    name: Windows x32
+    name: Windows x86
     uses: ./.github/workflows/_transpiler_windows_build.yml
     with:
       build_platform: Win32
@@ -38,10 +38,26 @@ jobs:
       build_mode: ${{inputs.build_mode}}
       bundle_binaries: ${{inputs.bundle_binaries}}
   build-transpiler-on-unix-like-latest-x86-32:
-    name: Unix-like x32
+    name: Unix-like x86
     uses: ./.github/workflows/_transpiler_unix_like_build.yml
     with:
       build_platform: x86
       build_platform_name: x86_32
+      build_mode: ${{inputs.build_mode}}
+      bundle_binaries: ${{inputs.bundle_binaries}}
+  build-transpiler-on-unix-like-latest-arm64:
+    name: Unix-like ARM64
+    uses: ./.github/workflows/_transpiler_unix_like_build.yml
+    with:
+      build_platform: ARM64
+      build_platform_name: arm64
+      build_mode: ${{inputs.build_mode}}
+      bundle_binaries: ${{inputs.bundle_binaries}}
+  build-transpiler-on-unix-like-latest-arm32:
+    name: Unix-like ARM
+    uses: ./.github/workflows/_transpiler_unix_like_build.yml
+    with:
+      build_platform: ARM
+      build_platform_name: arm32
       build_mode: ${{inputs.build_mode}}
       bundle_binaries: ${{inputs.bundle_binaries}}
