--- a/.github/workflows/_transpiler_dynamic_build.yml
+++ b/.github/workflows/_transpiler_dynamic_build.yml
@@ -8,6 +8,8 @@ on:
         required: true
         type: boolean
 
+# https://docs.github.com/en/actions/using-github-hosted-runners/using-github-hosted-runners/about-github-hosted-runners#standard-github-hosted-runners-for-public-repositories
+
 jobs:
 
   # x86_64
@@ -23,6 +25,8 @@ jobs:
     name: Unix-like x64
     uses: ./.github/workflows/_transpiler_unix_like_build.yml
     with:
+      linux_system: ubuntu-latest
+      mac_system: macos-13
       build_platform: x64
       build_platform_name: x86_64
       build_mode: ${{inputs.build_mode}}
@@ -41,6 +45,8 @@ jobs:
     name: Unix-like x86
     uses: ./.github/workflows/_transpiler_unix_like_build.yml
     with:
+      linux_system: ubuntu-latest
+      mac_system: macos-13
       build_platform: x86
       build_platform_name: x86_32
       build_mode: ${{inputs.build_mode}}
@@ -59,6 +65,8 @@ jobs:
     name: Unix-like ARM64
     uses: ./.github/workflows/_transpiler_unix_like_build.yml
     with:
+      linux_system: ubuntu-24.04-arm
+      mac_system: macos-latest
       build_platform: ARM64
       build_platform_name: arm64
       build_mode: ${{inputs.build_mode}}
@@ -77,6 +85,8 @@ jobs:
     name: Unix-like ARM
     uses: ./.github/workflows/_transpiler_unix_like_build.yml
     with:
+      linux_system: ubuntu-24.04-arm
+      mac_system: macos-latest
       build_platform: ARM
       build_platform_name: arm32
       build_mode: ${{inputs.build_mode}}
