--- a/.github/workflows/_transpiler_unix_like_build.yml
+++ b/.github/workflows/_transpiler_unix_like_build.yml
@@ -1,6 +1,14 @@
 on:
   workflow_call: # Added this line to make it reusable
     inputs:
+      linux_system:
+        required: false
+        type: string
+        default: ubuntu-latest
+      mac_system:
+        required: false
+        type: string
+        default: macos-latest
       build_platform:
         required: true
         type: string
@@ -19,7 +27,7 @@ jobs:
   # Linux
   build-transpiler-on-ubuntu-latest:
     name: Linux ${{inputs.build_platform_name}}
-    runs-on: ubuntu-latest
+    runs-on: ${{inputs.linux_system || ubuntu-latest}}
 
     steps:
     - name: Checkout code
@@ -61,7 +69,7 @@ jobs:
   # macOS
   build-transpiler-on-macos-latest:
     name: macOS ${{inputs.build_platform_name}}
-    runs-on: macos-latest
+    runs-on: ${{inputs.mac_system || macos-latest}}
 
     steps:
     - name: Checkout code
