--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,26 +63,26 @@ jobs:
           while IFS= read -r artifact_name; do
             # Download (archive contents)
             echo "Downloading and uploading artifact: $artifact_name"
-            $dir="c__$artifact_name"
-            gh run download ${{github.run_id}} -n "$artifact_name" -D "$dir" --repo ${{github.repository}}
+            artifact_dir="c__$artifact_name"
+            gh run download ${{github.run_id}} -n "$artifact_name" -D "$artifact_dir" --repo ${{github.repository}}
 
             # Check archive type
             if [ $(expr index "$artifact_name" ".vsix") -gt 0 ]; then
               # Upload a plain package file
-              gh release upload ${{github.ref_name}} "$dir/$artifact_name" --repo ${{github.repository}}
+              gh release upload ${{github.ref_name}} "$artifact_dir/$artifact_name" --repo ${{github.repository}}
             else
               # .zip
-              $zip="$artifact_name.zip"
-              zip "$zip" "$dir/*"
-              gh release upload ${{github.ref_name}} "$zip" --repo ${{github.repository}}
+              artifact_zip="$artifact_name.zip"
+              zip "$artifact_zip" "$artifact_dir/*"
+              gh release upload ${{github.ref_name}} "$artifact_zip" --repo ${{github.repository}}
               # .tar
-              $tar="$artifact_name.tar"
-              tar -czvf "$tar" "$dir/*"
-              gh release upload ${{github.ref_name}} "$tar" --repo ${{github.repository}}
+              artifact_tar="$artifact_name.tar"
+              tar -czvf "$artifact_tar" "$artifact_dir/*"
+              gh release upload ${{github.ref_name}} "$artifact_tar" --repo ${{github.repository}}
               # .tar.gz
-              $targz="$artifact_name.tar.gz"
-              tar -czvf "$targz" "$dir/*"
-              gh release upload ${{github.ref_name}} "$targz" --repo ${{github.repository}}
+              artifact_targz="$artifact_name.tar.gz"
+              tar -czvf "$artifact_targz" "$artifact_dir/*"
+              gh release upload ${{github.ref_name}} "$artifact_targz" --repo ${{github.repository}}
             fi
           done < artifacts.txt
         env:
