--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,12 +54,16 @@ jobs:
 
       - name: List Artifacts
         run: |
+          #!/bin/bash
+          set -e
           gh api repos/${{github.repository}}/actions/runs/${{github.run_id}}/artifacts --jq '.artifacts[] | .name' | tr -d '"' | tee artifacts.txt
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
       - name: Attach Artifacts
         run: |
+          #!/bin/bash
+          set -e
           while IFS= read -r artifact_name; do
             # Download (archive contents)
             echo "Downloading and uploading artifact: $artifact_name"
@@ -74,14 +78,17 @@ jobs:
               # .zip
               artifact_zip="$artifact_name.zip"
               zip $artifact_zip $artifact_dir/*
+              echo "Uploading $artifact_zip..."
               gh release upload ${{github.ref_name}} "$artifact_zip" --repo ${{github.repository}}
               # .tar
               artifact_tar="$artifact_name.tar"
               tar -czvf $artifact_tar $artifact_dir/*
+              echo "Uploading $artifact_tar..."
               gh release upload ${{github.ref_name}} "$artifact_tar" --repo ${{github.repository}}
               # .tar.gz
               artifact_targz="$artifact_name.tar.gz"
               tar -czvf $artifact_targz $artifact_dir/*
+              echo "Uploading $artifact_targz..."
               gh release upload ${{github.ref_name}} "$artifact_targz" --repo ${{github.repository}}
             fi
           done < artifacts.txt
