--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Install latest gh CLI
+        run: |
+          sudo apt-get update
+          sudo apt-get install gh -y --reinstall
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
