Change artifact names

--- a/.github/workflows/_transpiler_windows_build.yml
+++ b/.github/workflows/_transpiler_windows_build.yml
@@ -64,5 +64,5 @@ jobs:
       if: inputs.bundle_binaries
       uses: actions/upload-artifact@v4
       with:
-        name: PolarFrankie-v${{env.VERSION}}-Windows-${{inputs.build_platform_name}}-${{inputs.build_mode}}
+        name: PolarFrankie-${{inputs.build_mode}}-v${{env.VERSION}}-Windows-${{inputs.build_platform_name}}
         path: ${{github.workspace}}/transpiler/dist/${{inputs.build_mode}}/${{inputs.build_platform_name}}/
